fixing issue where BG did not cover full width on mobile

--- a/styles/_base.scss
+++ b/styles/_base.scss
@@ -7,6 +7,7 @@
 
 html {
   height: 100%;
+  margin: 0;
 }
 
 body {
@@ -615,7 +616,7 @@ nav.primary-menu ul {
   font-size: 0.9125rem;
   padding: 0 0 0 25px;
   margin: 0;
-  width: 30vw;
+  width: 0;
   max-width: 600px;
 }
 nav.primary-menu ul li {
@@ -634,6 +635,12 @@ li.primary-menu-item::after {
 }
 li.primary-menu-item a {
   display: block;
+}
+
+nav.primary-menu.active ul {
+  width: 30vw;
+  min-width: 200px;
+  max-width: 60vw;
 }
 
 nav.primary-menu.active ul li {
